02_COMPUTING/02_HELM_AND_KUBERNETES/02_EXERCICES/optimize-ml-traking/mlflow/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment

spec:
  selector:
    matchLabels:
      app: mlflow-dashboard
  replicas: 2
  template:
    metadata:
      labels:
        app: mlflow-dashboard
    spec:
      containers:
        - name: mlflow-server
          image: jedha/sample-mlflow-server
          ports:
            - containerPort: 8080
