02_COMPUTING/02_HELM_AND_KUBERNETES/02_EXERCICES/optimize-ml-traking/mlflow/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service

spec:
  type: LoadBalancer
  selector:
    app: mlflow-dashboard
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8080
